@@ -586,7 +586,7 @@
                                         <child>
                                           <object class="GtkCellRendererText" id="cellrenderertext_2"/>
                                           <attributes>
-                                            <attribute name="text">2</attribute>
+                                            <attribute name="text">3</attribute>
                                           </attributes>
                                         </child>
                                       </object>
@@ -597,7 +597,7 @@
                                         <child>
                                           <object class="GtkCellRendererText" id="cellrenderertext3"/>
                                           <attributes>
-                                            <attribute name="text">3</attribute>
+                                            <attribute name="text">4</attribute>
                                           </attributes>
                                         </child>
                                       </object>
@@ -611,7 +611,7 @@
                                             <property name="ellipsize">end</property>
                                           </object>
                                           <attributes>
-                                            <attribute name="text">4</attribute>
+                                            <attribute name="text">5</attribute>
                                           </attributes>
                                         </child>
                                       </object>
@@ -630,7 +630,7 @@
                                             <property name="ellipsize">end</property>
                                           </object>
                                           <attributes>
-                                            <attribute name="text">5</attribute>
+                                            <attribute name="text">6</attribute>
                                           </attributes>
                                         </child>
                                       </object>
